# a18-13

./: CMakeLists.txt  README.md  package.xml
bagfiles/: run.bag  test.bag
ds_haar/: CMakeLists.txt  README.md  package.xml
ds_haar/launch/: start.launch  start_ds.launch
ds_haar/src/: detector.py  detector_signs.py
ds_haar/src/cascade/: cascade_20x20.xml  cascade_f_or_l_20x20.xml  cascade_f_or_r_20x20.xml  cascade_left_20x20.xml  cascade_right_20x20.xml
ds_haar2/src/: convert_img.py  detector.py  detector_signs_2.py  traffic_light.py
ds_haar2/src/cascade/: cascade_f_20x20.xml  cascade_stop_20x20.xml
launch/: bag_record.launch  navigate.launch  slam.launch  start_robot.launch
launch/include/: amcl.launch
launch/include/move_base/: move_base_ackermann.launch
launch/start/: start.launch  start_fin.launch  start_navigate.launch  start_slam.launch
maps/: map_mini_robofest2020.yaml
param/navigation/: costmap_common_params.yaml
rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
rviz/: slam.rviz
sc_robot/: CMakeLists.txt  README.md  package.xml
sc_robot/launch/: navigate.launch
sc_robot/launch/include/move_base/: move_base_ackermann.launch
sc_robot/launch/start/: start_navigate.launch
sc_robot/maps/: map_mini_robofest2020.pgm
sc_robot/param/navigation/: base_local_planner_ackermann_params.yaml  local_costmap_params.yaml
sc_robot/rviz/: navigate.rviz
sc_robot/src/: goals.py  init_pose.py
src/: goals.py  init_pose.py  robot_run.py
